--- a/css/app.css
+++ b/css/app.css
@@ -51,10 +51,10 @@ h2 {
     text-shadow: 0 0 5px #01579b;
 }
 
-#belize {
+#harare {
     background-color: #4dd0e1;
 }
 
-#barcelona {
+#gweru {
     background-color: #800000;
 }
